[package]
name = "aoc-cache"
description = "A way of caching your input from the great and popular Advent of Code"
repository = "https://github.com/glennib/aoc-cache"
version = "0.1.4"
edition = "2021"
keywords = ["puzzles", "advent-of-code"]
categories = ["caching"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scratch = "1"
thiserror = "1"
tracing = ">=0.1.36"
url = "2"
