[package]
name = "aoc-cache"
description = "A way of caching your input from the great and popular Advent of Code"
repository = "https://github.com/glennib/aoc-cache"
version = "0.2.1"
edition = "2021"
keywords = ["puzzles", "advent-of-code"]
categories = ["caching"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.16.1"
cookie_store = "0.16.0"
scratch = "1"
thiserror = "1"
tracing = ">=0.1.36"
ureq = { version = "2.5.0", features = ["cookies"] }
url = "2"
