[package]
name = "aoc-cache"
description = "A way of caching your input from the great and popular Advent of Code"
repository = "https://github.com/glennib/aoc-cache"
version = "0.2.2"
edition = "2021"
keywords = ["puzzles", "advent-of-code"]
categories = ["caching"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18.0"
cookie_store = "0.20.0"
scratch = "1"
thiserror = "1"
tracing = "0.1.40"
ureq = { version = "2.9.1", features = ["cookies"] }
url = "2"
